--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
-    "fingerprint": "~0.5.3"
+    "fingerprint": "~0.5.3",
+    "zeroclipboard": "~1.3.5"
   }
 }
