--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery": "~2.1.0",
     "underscore": "~1.6.0",
     "fingerprint": "~0.5.3",
-    "zeroclipboard": "~1.3.5"
+    "zeroclipboard": "~1.3.5",
+    "toastr": "~2.0.2"
   }
 }
